Well, it works. It's slow but it works.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,16 @@
 BINARY=meshimp
-CC=clang++
-CFLAGS=-c -Wall -g -I../include/ -O3
-LDFLAGS=-lpng -L/usr/local/lib -L/usr/X11/lib
+CFLAGS=-c -Wall -g -I../include/ --std=c++0x -I/usr/include/GL -I/usr/include -O0
 SOURCES=$(wildcard *.cpp)
 OBJECTS=$(SOURCES:.cpp=.o)
+UNAME=$(shell uname)
+
+ifeq ($(UNAME), Darwin)
+CC=clang++
+LDFLAGS=-lm -framework OpenGL -framework GLUT -pg
+else
+CC=g++
+LDFLAGS=-L/usr/local/lib -L/usr/X11/lib -pg
+endif
 
 all: $(SOURCES) $(BINARY)
 	
